add Create Account button for login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -39,6 +39,11 @@
             <label for="firstTimeUser">Read Tutorial?</label>
         </div>
 
+        <div id="createAccDiv">
+            <input id="firstTimeUser" type="checkbox">
+            <label for="firstTimeUser">Create Account (for New Users)</label>
+        </div>
+
         <button type="button" id="loginButton">Submit!</button>
     </div>
 
