--- a/public/css/style.css
+++ b/public/css/style.css
@@ -889,6 +889,25 @@ body {
   font-size: 40px;
 }
 
+.login #createAccDiv {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.login #createAccDiv #firstTimeUser {
+  margin: 0px 20px 0px 0px;
+  margin: 0;
+  width: 50px;
+  height: 50px;
+}
+
+.login #createAccDiv label {
+  font-size: 40px;
+}
+
+
 .login #loginButton {
   margin-top: 30px;
   font-size: 40px;
