updated emotion assessment questions and buttons

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -64,8 +64,8 @@
 				</p>
 			</div>
 			<div class="quizButton">
-				<button type="button" id="quizYesButton" onclick="nextQuestion()">Yes</button>
-				<button type="button" id="quizNoButton" onclick="nextQuestion()">No</button>
+				<button type="button" id="quizYesButton" onclick="nextQuestion()">Good</button>
+				<button type="button" id="quizNoButton" onclick="nextQuestion()">Bad</button>
 			</div>
 		</div>
 
