fix result memo feedback and add css to memoGroup

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -280,6 +280,9 @@ body {
 
 .content .scanResultModal #memoGroup{
   width: 100%;
+  display:flex;
+  flex-direction:row;
+  justify-content: space-between;
 }
 
 .content .scanResultModal #memoGroup #resultMemo {
