add home changes

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -87,7 +87,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 		<div class="scanResultModalB" id="scanResultDiv">
 			<p>Done!
 				<br> Memo:
-				<textarea placeholder="What other thoughts do you have for today?" id="resultMemo"></textarea>
+				<textarea placeholder="What are you thinking about..." id="resultMemo"></textarea>
 
 				<button type="submit" id="resultMemoSubmit"> 
 					<img src="../images/checkmark.png" width="50">
@@ -154,7 +154,7 @@ valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
 				</li>
 			</ul>
 			<div id = "memoGroup">
-				<input type="text" placeholder="What other thoughts do you have for today?" id="resultMemo">
+				<input type="text" placeholder="What are you thinking about..." id="resultMemo">
 				<button type="submit" id="resultMemoSubmit"> 
 					<img src="../images/checkmark.png" width="50">
 				</button>
