--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: adamGorryInline;
-    src: url(adam_gorry_inline.woff);
-}
-
 body {
   font-family: 'Sniglet', cursive;
 }
@@ -256,7 +251,7 @@ body {
 }
 
 .content .scanResultModal input {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .content .scanResultModal ul {
@@ -283,25 +278,10 @@ body {
   height: 60px;
 }
 
-.content .scanResultModal #memoGroup{
-  width: 100%;
-  display:flex;
-  flex-direction:row;
-  justify-content: space-between;
-}
-
-.content .scanResultModal #memoGroup #resultMemo {
-  width: 73%;
-  height: 70px;
+.content .scanResultModal #resultMemo {
+  width: 90%;
+  height: 50px;
   margin: 20px;
-  position: absolute;
-  left:0px;
-  margin-bottom: 30px;
-}
-
-.content .scanResultModal #memoGroup button {
-  position: absolute;
-  right: 5px;
 }
 
 .content .scanResultModal .buttons {
@@ -309,7 +289,6 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 110px;
 }
 
 .content .scanResultModal button {
@@ -427,13 +406,6 @@ body {
   font-family: 'Sniglet', cursive;
 }
 
-.content .raccoonbookBox p {
-  font-size: 30px;
-  margin-right: 7%;
-  margin-left: 7%;
-  font-family: 'Sniglet', cursive;
-}
-
 .content .raccoonbookBox .raccoons {
   margin: 5%;
   display: grid;
@@ -459,8 +431,6 @@ body {
 .content .raccoonbookBox .raccoons .raccoon img {
   max-height: 40%;
   max-width: 90%;
-  width: auto;
-  height: auto;
 }
 
 .content .raccoonbookBox .raccoons .raccoon p {
@@ -491,12 +461,11 @@ body {
 }
 
 .content .raccoonbookBox .raccoondescription img {
-  max-width: 70%;
-  max-height: 30%;
-  padding: 10px;
-  /*border: solid 4px #525863;
+  max-width: 80%;
+  max-height: 40%;
+  border: solid 4px #525863;
   overflow: hidden;
-  background-color: white;*/
+  background-color: white;
 }
 
 .content .raccoonbookBox .raccoondescription #college {
@@ -603,6 +572,18 @@ body {
 
 .calendarModal .records li {
   width: 100%;
+}
+
+.calendarModal .records .deleteBtn {
+  border: 3px solid #525863;
+  border-radius: 10px;
+  width: 70px;
+  height: 70px;
+  padding: 2px;
+}
+
+.calendarModal .records .deleteBtn:hover {
+  background-color: #FF7F7F;
 }
 
 .game {
@@ -859,7 +840,7 @@ body {
 .login {
   display: flex;
   position: fixed;
-  height: 100%;
+  height: 120%;
   width: 100%;
   background-color: white;
   z-index: 1;
@@ -886,71 +867,39 @@ body {
 
 .login h3 {
   font-size: 50px;
-  text-align: left;
-  font-weight: 700;
-  color: white;
-}
-
-.login #loginGraphic{
-  margin-bottom: 60px;
 }
 
 .login .userName, .login .password {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: left;
+  align-items: center;
 }
 
 .login .userName input, .login .password input {
-  margin: 0% 0% 5% 0%;
+  margin: 5% 10% 30% 10%;
   width: 100%;
-  height: 80px;
-  font-size: 60px;
-}
-
-.login #checkBoxes #tutorialDiv {
-  display: flex;
-  flex-direction: row;
-  /*justify-content: space-between;*/
-  align-content: left;
-}
-
-.login #checkBoxes #tutorialDiv #firstTimeUser {
-  margin: 0px 20px 0px 0px;
-  margin: 0;
-  width: 50px;
-  height: 50px;
-  align-content: left;
-}
-
-.login #checkBoxes #tutorialDiv label {
+  height: 60px;
   font-size: 40px;
-  margin-left: 20;
-  color:white;
 }
 
-.login #checkBoxes #createAccDiv {
+.login #tutorialDiv {
   display: flex;
   flex-direction: row;
- /* justify-content: space-between;*/
+  justify-content: space-between;
   align-content: center;
 }
 
-.login #checkBoxes #createAccDiv #firstTimeUser {
+.login #tutorialDiv #firstTimeUser {
   margin: 0px 20px 0px 0px;
   margin: 0;
   width: 50px;
   height: 50px;
 }
 
-.login #checkBoxes #createAccDiv label {
+.login #tutorialDiv label {
   font-size: 40px;
-  margin-left: 20;
-  color:white;
-
 }
-
 
 .login #loginButton {
   margin-top: 30px;
